--- a/EmployeeData/public/views/employee/list-employee.html
+++ b/EmployeeData/public/views/employee/list-employee.html
@@ -2,6 +2,17 @@
   <div class="row" style="margin: 0px 0px 10px 0px;">
         <div><h4>{{title}}</h4></div>
         <div class="text-right">
+           <div id="custom-search-input">
+                <div class="input-group col-md-12">
+                    <input type="text" placeholder="Search NIP" style="margin: 10px 10px 10px 10px;width: 250px;" ng-model="nip" />
+                    <a href="#/search/{{ nip }}" tooltip="Search NIP" class="btn btn-info">
+                        <span class="glyphicon glyphicon-search"></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <br>
+        <div class="text-left">
             <a href="#/new-employee" class="btn btn-info" role="button">Add New Employee</a>
         </div>
   </div>
