implement datamap generator controller on datamap

--- a/EmployeeData/public/views/datamap/main-datamap.html
+++ b/EmployeeData/public/views/datamap/main-datamap.html
@@ -1,6 +1,5 @@
-<!doctype html>
-<html>
-    <head>
-        Coming soon.
-    </head>
-</html>
+<div id="post-stream">
+  <div class="row" style="margin: 0px 0px 10px 0px;">
+        <div><h4>{{title}}</h4></div>
+  </div>
+</div>
