add search criteria feature and table sorting

--- a/EmployeeData/public/views/employee/search-employee.html
+++ b/EmployeeData/public/views/employee/search-employee.html
@@ -23,49 +23,49 @@
           <thead>
             <tr>
                 <th>
-                    <a href="#/" ng-click="sortType = 'nip'; sortReverse = !sortReverse">
+                    <a href="#/search/{{ searchArgs }}" ng-click="sortType = 'nip'; sortReverse = !sortReverse">
                     NIP
                     <span ng-show="sortType == 'nip' && !sortReverse" class="fa fa-caret-down"></span>
                     <span ng-show="sortType == 'nip' && sortReverse" class="fa fa-caret-up"></span>
                     </a>
                 </th>
                 <th>
-                    <a href="#/" ng-click="sortType = 'nama'; sortReverse = !sortReverse">
+                    <a href="#/search/{{ searchArgs }}" ng-click="sortType = 'nama'; sortReverse = !sortReverse">
                     Nama
                     <span ng-show="sortType == 'nama' && !sortReverse" class="fa fa-caret-down"></span>
                     <span ng-show="sortType == 'nama' && sortReverse" class="fa fa-caret-up"></span>
                     </a>
                 </th>
                 <th>
-                    <a href="#/" ng-click="sortType = 'lantai'; sortReverse = !sortReverse">
+                    <a href="#/search/{{ searchArgs }}" ng-click="sortType = 'lantai'; sortReverse = !sortReverse">
                     Lantai
                     <span ng-show="sortType == 'lantai' && !sortReverse" class="fa fa-caret-down"></span>
                     <span ng-show="sortType == 'lantai' && sortReverse" class="fa fa-caret-up"></span>
                     </a>
                     </th>
                 <th>
-                    <a href="#/" ng-click="sortType = 'baris'; sortReverse = !sortReverse">
+                    <a href="#/search/{{ searchArgs }}" ng-click="sortType = 'baris'; sortReverse = !sortReverse">
                     Baris
                     <span ng-show="sortType == 'baris' && !sortReverse" class="fa fa-caret-down"></span>
                     <span ng-show="sortType == 'baris' && sortReverse" class="fa fa-caret-up"></span>
                     </a>
                 </th>
                 <th>
-                    <a href="#/" ng-click="sortType = 'kelompok'; sortReverse = !sortReverse">
+                    <a href="#/search/{{ searchArgs }}" ng-click="sortType = 'kelompok'; sortReverse = !sortReverse">
                     Kelompok
                     <span ng-show="sortType == 'kelompok' && !sortReverse" class="fa fa-caret-down"></span>
                     <span ng-show="sortType == 'kelompok' && sortReverse" class="fa fa-caret-up"></span>
                     </a>
                 </th>
                 <th>
-                    <a href="#/" ng-click="sortType = 'nomor'; sortReverse = !sortReverse">
+                    <a href="#/search/{{ searchArgs }}" ng-click="sortType = 'nomor'; sortReverse = !sortReverse">
                     Nomor
                     <span ng-show="sortType == 'nomor' && !sortReverse" class="fa fa-caret-down"></span>
                     <span ng-show="sortType == 'nomor' && sortReverse" class="fa fa-caret-up"></span>
                     </a>
                 </th>
                 <th>
-                    <a href="#/" ng-click="sortType = 'kolom'; sortReverse = !sortReverse">
+                    <a href="#/search/{{ searchArgs }}" ng-click="sortType = 'kolom'; sortReverse = !sortReverse">
                     Kolom
                     <span ng-show="sortType == 'kolom' && !sortReverse" class="fa fa-caret-down"></span>
                     <span ng-show="sortType == 'kolom' && sortReverse" class="fa fa-caret-up"></span>
