--- a/EmployeeData/public/views/employee/edit-employee.html
+++ b/EmployeeData/public/views/employee/edit-employee.html
@@ -70,7 +70,7 @@
         <div class="form-group"> 
             <div class="col-sm-offset-2 col-sm-10">
                 <button type="submit" ng-click="saveEmployee()" class="btn btn-success">Save</button>
-                <a href="#/employee" class="btn btn-warning">Cancel</a>
+                <a href="#/" class="btn btn-warning">Cancel</a>
             </div>
         </div>
     </form>
